tests/snapshots/asm_snapshots__asm_i256_mul@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i256::Int256 as core::ops::arith::Mul>::mul,"ax",@progbits
	.globl	<bigints::i256::Int256 as core::ops::arith::Mul>::mul
	.p2align	2
.type	<bigints::i256::Int256 as core::ops::arith::Mul>::mul,@function
<bigints::i256::Int256 as core::ops::arith::Mul>::mul:
	.cfi_startproc
	sub sp, sp, #128
	.cfi_def_cfa_offset 128
	stp x29, x30, [sp, #96]
	str x19, [sp, #112]
	add x29, sp, #96
	.cfi_def_cfa w29, 32
	.cfi_offset w19, -16
	.cfi_offset w30, -24
	.cfi_offset w29, -32
	ldp q0, q1, [x0]
	mov x19, x8
	mov x8, sp
	add x0, sp, #32
	stp q0, q1, [sp, #32]
	ldp q0, q2, [x1]
	sub x1, x29, #32
	stp q0, q2, [x29, #-32]
	bl <bigints::u256::Uint256 as core::ops::arith::Mul>::mul
	ldp q0, q1, [sp]
	stp q0, q1, [x19]
	.cfi_def_cfa wsp, 128
	ldp x29, x30, [sp, #96]
	ldr x19, [sp, #112]
	add sp, sp, #128
	.cfi_def_cfa_offset 0
	.cfi_restore w19
	.cfi_restore w30
	.cfi_restore w29
	ret
