tests/snapshots/asm_snapshots__asm_i256_mul_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i256::Int256 as core::ops::arith::Mul>::mul:
	stmg %r13, %r15, 104(%r15)
	aghi %r15, -256
	lgr %r13, %r2
	mvc 192(8,%r15), 0(%r3)
	mvc 200(8,%r15), 8(%r3)
	mvc 208(8,%r15), 16(%r3)
	mvc 216(8,%r15), 24(%r3)
	mvc 224(8,%r15), 0(%r4)
	mvc 232(8,%r15), 8(%r4)
	mvc 240(8,%r15), 16(%r4)
	mvc 248(8,%r15), 24(%r4)
	la %r2, 160(%r15)
	la %r3, 192(%r15)
	la %r4, 224(%r15)
	brasl %r14, <bigints::u256::Uint256 as core::ops::arith::Mul>::mul@PLT
	mvc 0(8,%r13), 160(%r15)
	mvc 8(8,%r13), 168(%r15)
	mvc 16(8,%r13), 176(%r15)
	mvc 24(8,%r13), 184(%r15)
	lmg %r13, %r15, 360(%r15)
	br %r14
